<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="@dimen/dim_12dp"
    >


    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:text="@string/user_consent"
        android:textAlignment="center"
        android:textColor="@color/color_black"
        android:textSize="@dimen/dim_20dp"
        android:id="@+id/consent_title"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/dim_12dp"
        android:layout_marginTop="@dimen/dim_8dp"
        />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/consent_msg"
        android:textAlignment="center"
        android:textColor="@color/card_title_color"
        android:textSize="@dimen/dim_16sp"
        android:layout_below="@id/consent_title"
        android:id="@+id/consent_msg"
        android:layout_marginBottom="@dimen/dim_8dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/consent_msg"
        android:id="@+id/user_consent_layout"
        android:layout_marginLeft="@dimen/dim_20dp"
        android:layout_centerInParent="true"
        android:paddingTop="@dimen/dim_4dp"
        android:paddingBottom="@dimen/dim_4dp"
        >

        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="@dimen/dim_28dp"
            android:layout_height="@dimen/dim_20dp"
            android:id="@+id/user_agree_check_box"
            android:layout_marginRight="@dimen/dim_4dp"
            />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dim_20dp"
            android:text="@string/agree_msg"
            android:layout_marginRight="@dimen/dim_8dp"
            />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dim_20dp"
            android:text="@string/term_condition"
            android:id="@+id/agree_text_view"
            android:textColor="@color/color_3686DF"
            android:layout_weight="1"
            android:textStyle="bold"
            />


    </LinearLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/user_continue_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_38dp"
        android:layout_alignLeft="@+id/user_cancel_button"
        android:layout_alignStart="@+id/user_cancel_button"
        android:layout_below="@+id/user_consent_layout"
        android:layout_marginTop="12dp"
        android:background="@color/card_title_color"
        android:text="@string/user_continu"
        android:textAllCaps="false"
        android:textColor="@color/color_FFFFFF"
        android:alpha="0.30"
        android:layout_marginRight="@dimen/dim_12dp"
        />

    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_38dp"
        android:layout_below="@id/user_continue_button"
        android:layout_marginTop="@dimen/dim_12dp"
        android:text="@string/user_cancel"
        android:id="@+id/user_cancel_button"
        android:background="@drawable/edit_background"
        android:textColor="@color/card_title_color"
        android:textAllCaps="false"
        android:layout_marginLeft="@dimen/dim_12dp"
        android:layout_marginRight="@dimen/dim_12dp"
        android:layout_marginBottom="@dimen/dim_12dp"

        />


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        >

        <ProgressBar
            android:layout_width="@dimen/dim_24dp"
            android:layout_height="@dimen/dim_24dp"
            android:layout_centerInParent="true"
            style="@style/progress_map"
            android:visibility="gone"
            android:id="@+id/progress_bar"
            />

    </FrameLayout>



</RelativeLayout>
